5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1593_1801.log
== TEST (2019-03-21 18:49:32) 
-- CODE:
nome = float(input("nome do objeto "))
num = float(input("numero de repeticoes do feitico "))
feitico = (abra + nome)*num
print(feitico)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = float(input())
ValueError: could not convert string to float: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:50:02) 
-- CODE:
nome = (input("nome do objeto "))
num = float(input("numero de repeticoes do feitico "))
feitico = (abra + nome)*num
print(feitico)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico = (abra + nome)*num
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:51:05) 
-- CODE:
nome = (input("nome do objeto "))
num = float(input("numero de repeticoes do feitico "))
feitico = ("abra + nome")*num
print(feitico)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico = ("abra + nome")*num
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:51:36) 
-- CODE:
nome = (input("nome do objeto "))
num = (input("numero de repeticoes do feitico "))
feitico = ("abra + nome")*num
print(feitico)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico = ("abra + nome")*num
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:53:44) 
-- CODE:
nome = (input("nome do objeto "))
num = (input("numero de repeticoes do feitico "))
feitico = abra + nome
print(feitico*num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico = abra + nome
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:54:26) 
-- CODE:
nome = (input("nome do objeto "))
num = (input("numero de repeticoes do feitico "))
feitico = "abra" + nome
print(feitico*num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(feitico*num)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:58:16) 
-- CODE:
nome = (input("nome do objeto "))
num = (input("numero de repeticoes do feitico "))
feitico = ("abra" + nome)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(feitico*num)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:58:19) 
-- CODE:
nome = (input("nome do objeto "))
num = (input("numero de repeticoes do feitico "))
feitico = ("abra" + nome)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(feitico*num)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:58:59) 
-- CODE:
nome = (input("nome do objeto "))
num = (input("numero de repeticoes do feitico "))
feitico = ("abra" + nome)
print(num*feitico)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(num*feitico)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:59:34) 
-- CODE:
nome = (input("nome do objeto "))
num = (input("numero de repeticoes do feitico "))
feitico = ("abra" + nome)
print(feitico)*num

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(feitico)*num
TypeError: can't multiply sequence by non-int of type 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:01:10) 
-- CODE:
nome = int((input("nome do objeto ")))
num = int((input("numero de repeticoes do feitico ")))
int(feitico) = ("abra" + nome)
print(feitico)*num

-- ERROR:
File "XXXX", line 3
    int(feitico) = ("abra" + nome)
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:03:29) 
-- CODE:
nome = int((input("nome do objeto ")))
num = int((input("numero de repeticoes do feitico ")))
(feitico) = ("abra" + nome)
print(feitico)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = int((input()))
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:03:30) 
-- CODE:
nome = int((input("nome do objeto ")))
num = int((input("numero de repeticoes do feitico ")))
(feitico) = ("abra" + nome)
print(feitico)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = int((input()))
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:03:47) 
-- CODE:
nome = ((input("nome do objeto ")))
num = int((input("numero de repeticoes do feitico ")))
(feitico) = ("abra" + nome)
print(feitico)

-- OUTPUT:
abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:04:03) 
-- CODE:
nome = ((input("nome do objeto ")))
num = int((input("numero de repeticoes do feitico ")))
(feitico) = ("abra " + nome)
print(feitico)

-- OUTPUT:
abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:05:18) 
-- CODE:
nome = ((input("nome do objeto ")))
num = int((input("numero de repeticoes do feitico ")))
(feitico) = ("abra " + nome)
magica = feitico*num
print(magica)

-- OUTPUT:
abra livroabra livroabra livroabra livroabra livroabra livroabra livroabra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:05:36) 
-- CODE:
nome = ((input("nome do objeto ")))
num = int((input("numero de repeticoes do feitico ")))
(feitico) = (" abra " + nome)
magica = feitico*num
print(magica)

-- OUTPUT:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:05:52) 
-- CODE:
nome = ((input("nome do objeto ")))
num = int((input("numero de repeticoes do feitico ")))
(feitico) = (" abra " + nome)
magica = feitico*num
print(magica)

-- EXECUTION TIME:
0.148987
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carro abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:06:40) 
-- CODE:
nome = ((input("nome do objeto ")))
num = int((input("numero de repeticoes do feitico ")))
(feitico) = (" abra " + nome)
magica = feitico*num
print(magica)

-- OUTPUT:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:07:26) 
-- CODE:
nome = ((input("nome do objeto ")))
num = int((input("numero de repeticoes do feitico ")))
(feitico) = (" abra " + nome)
magica = feitico*num
print(magica)

-- EXECUTION TIME:
0.14055
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carro abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:08:22) 
-- CODE:
nome = ((input("nome do objeto ")))
num = int((input("numero de repeticoes do feitico ")))
(feitico) = (" abra " + nome)
magica = (feitico*num)
print(magica)

-- OUTPUT:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:09:14) 
-- CODE:
nome = ((input("nome do objeto ")))
num = int((input("numero de repeticoes do feitico ")))
feitico = (" abra " + nome)
magica = (feitico*num)
print(magica)

-- EXECUTION TIME:
0.13196
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carro abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:33:36) 
-- CODE:
nome = ((input("nome do objeto ")))
num = int((input("numero de repeticoes do feitico ")))
feitico = (" abra " + nome)
magica = (feitico*num)
print(magica)

-- OUTPUT:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:34:22) 
-- CODE:
nome = ((input("nome do objeto ")))
num = int((input("numero de repeticoes do feitico ")))
feitico = (" abra " + nome)
magica = (feitico*num)
print(magica)

-- EXECUTION TIME:
0.137681
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carro abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:48:07) 
-- CODE:
nome = ((input("nome do objeto ")))
num = int((input("numero de repeticoes do feitico ")))
feitico = (" abra " + nome)
magica = (feitico*num)
print(magica)

-- OUTPUT:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:48:27) 
-- CODE:
nome = ((input("nome do objeto ")))
num = int((input("numero de repeticoes do feitico ")))
feitico = (" Abra " + nome)
magica = (feitico*num)
print(magica)

-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:48:38) 
-- CODE:
nome = ((input("nome do objeto ")))
num = int((input("numero de repeticoes do feitico ")))
feitico = (" Abra " + nome)
magica = (feitico*num)
print(magica)

-- EXECUTION TIME:
0.166564
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
